edit to DiamondButton.scss to fix button appearance on dark mode

--- a/src/components/DiamondButton/DiamondButton.scss
+++ b/src/components/DiamondButton/DiamondButton.scss
@@ -13,10 +13,10 @@
     width: min-content;
     margin: 5px;
 
-
     .btn-text {
       text-transform: uppercase;
       white-space: normal;
+      background: transparent;
     }
   }
 
